hphp/hack/test/typecheck/tconst/access_abstract_tconst3.php.exp
File "access_abstract_tconst3.php", line 13, characters 16-16:
This object is of type C (Typing[4146])
File "access_abstract_tconst3.php", line 13, characters 29-29:
It is incompatible with this object of type I
because some declarations are incompatible.
Read the following to see why:
File "access_abstract_tconst3.php", line 10, characters 26-38:
Error while expanding the type constant this::TFoo::T:
File "access_abstract_tconst3.php", line 10, characters 38-38:
Cannot directly access the abstract type constant Foo::T
File "access_abstract_tconst3.php", line 4, characters 23-23:
Foo::T was declared abstract here
File "access_abstract_tconst3.php", line 10, characters 26-35:
We believe the type constant this::TFoo expands to an object of type Foo for the following reason:
File "access_abstract_tconst3.php", line 14, characters 21-23:
This is an object of type Foo
